# python-module-jk-simpleexec

./: .gitignore  HISTORY.md  README.md  packageinfo.json  packageinfo.jsonc
examples/: fail.py  invokeCmd__fail.py  invokeCmd__ls.py  runCmd__ls.py  runCmd_ssh_localhost__ls.py  test.py
src/: README.md  README.rst  pyproject.toml  setup.py
src/jk_simpleexec/: CommandResult.py  TextDataProcessingPolicy.py  WhereIs.py  _DebugValveToFile.py  __init__.py  _common.py  invoke_utils.py  primitives.py  simpleexec.py
testing/: test_whereis.py
